--- a/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
@@ -139,21 +139,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-    </dependency>
-
-    <!-- Used by parse groovy from page -->
-    <!-- Note: We only depend on the miniumum required to compile oldcore since the distributions will depend on
-         xwiki-commons-groovy which has dependencies on all the various groovy jars and thus they'll be bundled -->
-    <dependency>
-      <groupId>org.apache.groovy</groupId>
-      <artifactId>groovy</artifactId>
-    </dependency>
-
-    <!-- Storage -->
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-    </dependency>
+    </dependency
     <!-- Replace the one from Hibernate -->
     <dependency>
       <groupId>jakarta.xml.bind</groupId>
