--- a/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-test/xwiki-platform-icon-test-pageobjects/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-test/xwiki-platform-icon-test-pageobjects/pom.xml
@@ -20,32 +20,22 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-icon</artifactId>
+    <artifactId>xwiki-platform-icon-test</artifactId>
     <version>17.1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-icon-test</artifactId>
-  <name>XWiki Platform - Icon - Tests - Parent POM</name>
-  <packaging>pom</packaging>
-  <description>XWiki Platform - Icon - Tests - Parent POM</description>
-  <properties>
-    <!-- Don't run backward-compatibility checks in test modules since we don't consider them as public APIs -->
-    <xwiki.revapi.skip>true</xwiki.revapi.skip>
-    <!-- Don't run Checkstyle in test modules -->
-    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
-  </properties>
-  <modules>
-    <module>xwiki-platform-icon-test-pageobjects</module>
-  </modules>
-  <profiles>
-    <profile>
-      <id>docker</id>
-      <modules>
-        <module>xwiki-platform-icon-test-docker</module>
-      </modules>
-    </profile>
-  </profiles>
+  <artifactId>xwiki-platform-icon-test-pageobjects</artifactId>
+  <name>XWiki Platform - Icon - Tests - Page Objects</name>
+  <packaging>jar</packaging>
+  <description>Test Page Objects for the Icon module</description>
+  <dependencies>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-test-ui</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
 </project>
